--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">julinha<span>salon</span>.</a>
+        <a class="logo" href="#">carol<span>salon</span>.</a>
         <!-- menu -->
         <div class="menu">
           <ul class="grid">
@@ -242,7 +242,7 @@
             <ul class="grid">
               <li><i class="icon-phone"></i> 65 99845-6754</li>
               <li><i class="icon-map-pin"></i> R. Amauri Souza, 346</li>
-              <li><i class="icon-mail"></i> contato@julinhasalon.com</li>
+              <li><i class="icon-mail"></i> contato@carolsalon.com</li>
             </ul>
           </div>
         </div>
@@ -254,7 +254,7 @@
     <footer class="section">
       <div class="container grid">
         <div class="brand">
-          <a class="logo logo-alt" href="#home">julinha<span>salon</span>.</a>
+          <a class="logo logo-alt" href="#home">carol<span>salon</span>.</a>
           <p>©2021 Beautysalon.</p>
           <p>Todos os direitos reservados.</p>
         </div>
